<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard"
            android:checkable="true" />
    </group>

    <item android:title="@string/management">
        <menu>
            <item
                android:id="@+id/nav_schools"
                android:icon="@drawable/ic_school"
                android:title="@string/schools"
                android:checkable="true" />
            <item
                android:id="@+id/nav_classes"
                android:icon="@drawable/ic_class"
                android:title="@string/classes"
                android:checkable="true" />
            <item
                android:id="@+id/nav_subjects"
                android:icon="@drawable/ic_book"
                android:title="@string/subjects"
                android:checkable="true" />
            <item
                android:id="@+id/nav_rooms"
                android:icon="@drawable/ic_room"
                android:title="@string/rooms"
                android:checkable="true" />
            <item
                android:id="@+id/nav_assignments"
                android:icon="@drawable/ic_assignment"
                android:title="@string/assignments"
                android:checkable="true" />
        </menu>
    </item>

    <item android:title="@string/users_section">
        <menu>
            <item
                android:id="@+id/nav_users"
                android:icon="@drawable/ic_person"
                android:title="@string/users"
                android:checkable="true" />
        </menu>
    </item>

    <item android:title="@string/system">
        <menu>
            <item
                android:id="@+id/nav_audit"
                android:icon="@drawable/ic_audit"
                android:title="@string/audit_log"
                android:checkable="true" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings"
                android:checkable="true" />
        </menu>
    </item>
</menu>