<?xml version="1.0" encoding="utf-8"?><!-- res/layout/filter_date_range.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="@drawable/div_16"
    android:orientation="vertical"
    android:showDividers="middle">

    <stud.euktop.uikit.components.input.SchJInput
        android:id="@+id/inputDateFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/from"
        android:inputType="none"
        app:endIconMode="clear_text"
        app:helperText="@string/date_range" />

    <stud.euktop.uikit.components.input.SchJInput
        android:id="@+id/inputDateTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/to"
        android:inputType="none"
        app:endIconMode="clear_text" />

</LinearLayout>