<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="44dp"
                android:text="@string/edit_room"
                android:textAppearance="@style/TextAppearance.SchJ.Title1.Bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/div_16"
                android:orientation="vertical"
                android:showDividers="middle">

                <!-- Выбор школы (поисковый селект) -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Widget.SchJ.TextView.Helper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/school" />

                    <stud.euktop.uikit.components.input.select.searchable.SchJSearchableSelect
                        android:id="@+id/selectSchool"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:title="@string/school" />
                </LinearLayout>

                <!-- Название кабинета -->
                <stud.euktop.uikit.components.input.SchJInput
                    android:id="@+id/inputName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/room_name"
                    android:inputType="text"
                    app:helperText="@string/room_name" />
            </LinearLayout>

            <include
                android:id="@+id/buttonsSaveCancel"
                layout="@layout/layout_buttons_save_cancel" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>